--- a/ProfileMatch.Services/LanguageService.resx
+++ b/ProfileMatch.Services/LanguageService.resx
@@ -555,11 +555,11 @@
   <data name="Edit note" xml:space="preserve">
     <value>Edit note</value>
   </data>
-  <data name="Open questions" xml:space="preserve">
-    <value>Open questions</value>
+  <data name="Open Questions" xml:space="preserve">
+    <value>Open Questions</value>
   </data>
-  <data name="Closed questions" xml:space="preserve">
-    <value>Closed questions</value>
+  <data name="Closed Questions" xml:space="preserve">
+    <value>Closed Questions</value>
   </data>
   <data name="My Categories" xml:space="preserve">
     <value>My Categories</value>
@@ -578,5 +578,29 @@
   </data>
   <data name="Zaloguj" xml:space="preserve">
     <value>Log in</value>
+  </data>
+  <data name="Edit Question" xml:space="preserve">
+    <value>Edit Question</value>
+  </data>
+  <data name="Max length" xml:space="preserve">
+    <value>Max length</value>
+  </data>
+  <data name="Role Name" xml:space="preserve">
+    <value>Role Name:</value>
+  </data>
+  <data name="Assigned" xml:space="preserve">
+    <value>Assigned:</value>
+  </data>
+  <data name="Email" xml:space="preserve">
+    <value>Email</value>
+  </data>
+  <data name="Department Name" xml:space="preserve">
+    <value>Department Name</value>
+  </data>
+  <data name="Department name is required!" xml:space="preserve">
+    <value>Department name is required!</value>
+  </data>
+  <data name="Department Description" xml:space="preserve">
+    <value>Department Description</value>
   </data>
 </root>
