--- a/ProfileMatch.Services/LanguageService.resx
+++ b/ProfileMatch.Services/LanguageService.resx
@@ -609,4 +609,13 @@
   <data name="unassigned" xml:space="preserve">
     <value>unassigned</value>
   </data>
+  <data name="Female" xml:space="preserve">
+    <value>Female</value>
+  </data>
+  <data name="Male" xml:space="preserve">
+    <value>Male</value>
+  </data>
+  <data name="Other" xml:space="preserve">
+    <value>Other</value>
+  </data>
 </root>
