--- a/ProfileMatch.Services/LanguageService.resx
+++ b/ProfileMatch.Services/LanguageService.resx
@@ -172,7 +172,7 @@
     <value>Edit Category</value>
   </data>
   <data name="Add Question" xml:space="preserve">
-    <value>Add ClosedQuestion</value>
+    <value>Add Question</value>
   </data>
   <data name="Actions" xml:space="preserve">
     <value>Actions</value>
@@ -511,16 +511,16 @@
     <value>Selection Page</value>
   </data>
   <data name="Question 1" xml:space="preserve">
-    <value>ClosedQuestion 1</value>
+    <value>Question 1</value>
   </data>
   <data name="Question 2" xml:space="preserve">
-    <value>ClosedQuestion 2</value>
+    <value>Question 2</value>
   </data>
   <data name="Question 3" xml:space="preserve">
-    <value>ClosedQuestion 3</value>
+    <value>Question 3</value>
   </data>
   <data name="Question 4" xml:space="preserve">
-    <value>ClosedQuestion 4</value>
+    <value>Question 4</value>
   </data>
   <data name="Question 5" xml:space="preserve">
     <value>Question 5</value>
@@ -556,7 +556,7 @@
     <value>Edit note</value>
   </data>
   <data name="Open Questions" xml:space="preserve">
-    <value>Open ClosedQuestions</value>
+    <value>Open Questions</value>
   </data>
   <data name="Closed Questions" xml:space="preserve">
     <value>Closed Questions</value>
