--- a/ProfileMatch.Services/LanguageService.pl.resx
+++ b/ProfileMatch.Services/LanguageService.pl.resx
@@ -618,4 +618,7 @@
   <data name="Other" xml:space="preserve">
     <value>Inne</value>
   </data>
+  <data name="Show profile" xml:space="preserve">
+    <value>Pokaż profil</value>
+  </data>
 </root>
