typo another fix

--- a/ProfileMatch.Services/LanguageService.pl.resx
+++ b/ProfileMatch.Services/LanguageService.pl.resx
@@ -478,7 +478,7 @@
     <value>Dopasowanie profilu</value>
   </data>
   <data name="Edit Answer" xml:space="preserve">
-    <value>Edytuj pytanie</value>
+    <value>Edytuj odpowiedź</value>
   </data>
   <data name="Selected Values" xml:space="preserve">
     <value>Wybrane wartości</value>
