--- a/ProfileMatch.Services/LanguageService.pl.resx
+++ b/ProfileMatch.Services/LanguageService.pl.resx
@@ -630,4 +630,7 @@
   <data name="New Category" xml:space="preserve">
     <value>Nowa kategoria</value>
   </data>
+  <data name="I want to develop" xml:space="preserve">
+    <value>Chcę rozwijać</value>
+  </data>
 </root>
