--- a/ProfileMatch.Services/LanguageService.pl.resx
+++ b/ProfileMatch.Services/LanguageService.pl.resx
@@ -40,7 +40,7 @@
     ResXResourceReader how to depersist the object. This is currently not 
     extensible. For a given mimetype the value must be set accordingly:
     
-    Note - application/x-microsoft.net.object.binary.base64 is the format 
+    OpenQuestion - application/x-microsoft.net.object.binary.base64 is the format 
     that the ResXResourceWriter will generate, however the reader can 
     read any of the formats listed below.
     
@@ -552,7 +552,7 @@
   <data name="Select all text" xml:space="preserve">
     <value>Zaznacz cały tekst</value>
   </data>
-  <data name="Edit note" xml:space="preserve">
+  <data name="Edit openQuestion" xml:space="preserve">
     <value>Edytuj odpowiedź</value>
   </data>
   <data name="Open Questions" xml:space="preserve">
