--- a/ProfileMatch.Services/LanguageService.pl.resx
+++ b/ProfileMatch.Services/LanguageService.pl.resx
@@ -630,7 +630,100 @@
   <data name="New Category" xml:space="preserve">
     <value>Nowa kategoria</value>
   </data>
-  <data name="I want to develop" xml:space="preserve">
-    <value>Chcę rozwijać</value>
+  <data name="Max allowed size is 5MB" xml:space="preserve">
+    <value>Maksymalny dozwolony rozmiar to 5 MB</value>
+  </data>
+  <data name="Wrong file format. Allowed file formats are: .jpg, .jpeg, .png." xml:space="preserve">
+    <value>Nieprawidłowy format pliku. Dozwolone formaty plików to: .jpg, .jpeg, .png.</value>
+  </data>
+  <data name="Max 20 characters" xml:space="preserve">
+    <value>Max 20 znaków</value>
+  </data>
+  <data name="Category {result.Name} created" xml:space="preserve">
+    <value>Kategoria utworzona</value>
+  </data>
+  <data name="Category {result.Name} updated" xml:space="preserve">
+    <value>Kategoria zaktualizowana</value>
+  </data>
+  <data name="ClosedQuestion {result.Name} created" xml:space="preserve">
+    <value>Pytanie zamknięte utworzone</value>
+  </data>
+  <data name="ClosedQuestion {Q.Name} updated" xml:space="preserve">
+    <value>Zamknięte pytanie {Q.Name} zaktualizowane</value>
+  </data>
+  <data name="$&quot;ClosedQuestion {Q.Name} already exists.&quot;" xml:space="preserve">
+    <value>Pytanie zamknięte {Q.Name}  już istnieje</value>
+  </data>
+  <data name="There was an error: {ex.Message}" xml:space="preserve">
+    <value>Wystąpił problem: {ex.Message}</value>
+  </data>
+  <data name="Category created" xml:space="preserve">
+    <value>Kategoria została utworzona</value>
+  </data>
+  <data name="Category updated" xml:space="preserve">
+    <value>Kategoria został zaktualizowana</value>
+  </data>
+  <data name="ClosedQuestion created" xml:space="preserve">
+    <value>Pytanie zamknięte zostało utworzone</value>
+  </data>
+  <data name="ClosedQuestion updated" xml:space="preserve">
+    <value>Pytanie zamknięte zostało zaktualizowane</value>
+  </data>
+  <data name="ClosedQuestion already exists." xml:space="preserve">
+    <value>Pytanie zamknięte już istnieje</value>
+  </data>
+  <data name="has been created[F]" xml:space="preserve">
+    <value>została utworzona</value>
+  </data>
+  <data name="has been updated[F]" xml:space="preserve">
+    <value>została zaktualizowana</value>
+  </data>
+  <data name="ClosedQuestion" xml:space="preserve">
+    <value>Pytanie zamknięte</value>
+  </data>
+  <data name="has been created[O]" xml:space="preserve">
+    <value>zostało utworzone</value>
+  </data>
+  <data name="already exists" xml:space="preserve">
+    <value>już istnieje</value>
+  </data>
+  <data name="has been updated[O]" xml:space="preserve">
+    <value>zostało zaktualizowane</value>
+  </data>
+  <data name="Answer option updated" xml:space="preserve">
+    <value>Zaktualizowano opcję odpowiedzi</value>
+  </data>
+  <data name="Answer option created" xml:space="preserve">
+    <value>Utworzono opcje odpowiedzi </value>
+  </data>
+  <data name="Note" xml:space="preserve">
+    <value>Pytanie otwarte</value>
+  </data>
+  <data name="has been created[M]" xml:space="preserve">
+    <value>został utworzony </value>
+  </data>
+  <data name="has been updated[M]" xml:space="preserve">
+    <value>został zaktualizowany</value>
+  </data>
+  <data name="created" xml:space="preserve">
+    <value>utworzono</value>
+  </data>
+  <data name="Upload file" xml:space="preserve">
+    <value>Załącz plik</value>
+  </data>
+  <data name="User" xml:space="preserve">
+    <value>Użytkownik</value>
+  </data>
+  <data name="AnswerOption" xml:space="preserve">
+    <value>Opcja opdowiedzi</value>
+  </data>
+  <data name="New User" xml:space="preserve">
+    <value>Nowy użytkownik</value>
+  </data>
+  <data name="New Department" xml:space="preserve">
+    <value>Nowy Dział</value>
+  </data>
+  <data name="Edit Department" xml:space="preserve">
+    <value>Edytuj dział</value>
   </data>
 </root>
