--- a/ProfileMatch.Services/LanguageService.resx
+++ b/ProfileMatch.Services/LanguageService.resx
@@ -630,7 +630,100 @@
   <data name="New Category" xml:space="preserve">
     <value>New Category</value>
   </data>
-  <data name="I want to develop" xml:space="preserve">
-    <value>I want to develop</value>
+  <data name="Max allowed size is 5MB" xml:space="preserve">
+    <value>Max allowed size is 5MB</value>
+  </data>
+  <data name="Wrong file format. Allowed file formats are: .jpg, .jpeg, .png." xml:space="preserve">
+    <value>Wrong file format. Allowed file formats are: .jpg, .jpeg, .png.</value>
+  </data>
+  <data name="Max 20 characters" xml:space="preserve">
+    <value>Max 20 characters</value>
+  </data>
+  <data name="Category {result.Name} created" xml:space="preserve">
+    <value>Category {result.Name} created</value>
+  </data>
+  <data name="Category {result.Name} updated" xml:space="preserve">
+    <value>Category {result.Name} updated</value>
+  </data>
+  <data name="ClosedQuestion {result.Name} created" xml:space="preserve">
+    <value>ClosedQuestion {result.Name} created</value>
+  </data>
+  <data name="ClosedQuestion {Q.Name} updated" xml:space="preserve">
+    <value>ClosedQuestion {Q.Name} updated</value>
+  </data>
+  <data name="$&quot;ClosedQuestion {Q.Name} already exists.&quot;" xml:space="preserve">
+    <value>ClosedQuestion {Q.Name} already exists.</value>
+  </data>
+  <data name="There was an error: {ex.Message}" xml:space="preserve">
+    <value>There was an error: {ex.Message}</value>
+  </data>
+  <data name="Category created" xml:space="preserve">
+    <value>Category created</value>
+  </data>
+  <data name="Category updated" xml:space="preserve">
+    <value>Category updated</value>
+  </data>
+  <data name="ClosedQuestion created" xml:space="preserve">
+    <value>ClosedQuestion created</value>
+  </data>
+  <data name="ClosedQuestion updated" xml:space="preserve">
+    <value>ClosedQuestion created</value>
+  </data>
+  <data name="ClosedQuestion already exists." xml:space="preserve">
+    <value>ClosedQuestion exists.</value>
+  </data>
+  <data name="has been created[F]" xml:space="preserve">
+    <value>has been created</value>
+  </data>
+  <data name="has been updated[F]" xml:space="preserve">
+    <value>has been updated</value>
+  </data>
+  <data name="ClosedQuestion" xml:space="preserve">
+    <value>ClosedQuestion</value>
+  </data>
+  <data name="has been created[O]" xml:space="preserve">
+    <value>has been created</value>
+  </data>
+  <data name="already exists" xml:space="preserve">
+    <value>already exists</value>
+  </data>
+  <data name="has been updated[O]" xml:space="preserve">
+    <value>has been updated</value>
+  </data>
+  <data name="Answer option updated" xml:space="preserve">
+    <value>Answer option updated</value>
+  </data>
+  <data name="Answer option created" xml:space="preserve">
+    <value>Answer option created</value>
+  </data>
+  <data name="Note" xml:space="preserve">
+    <value>Note</value>
+  </data>
+  <data name="has been created[M]" xml:space="preserve">
+    <value>has been created</value>
+  </data>
+  <data name="has been updated[M]" xml:space="preserve">
+    <value>has been updated</value>
+  </data>
+  <data name="created" xml:space="preserve">
+    <value>created </value>
+  </data>
+  <data name="Upload file" xml:space="preserve">
+    <value>Upload file</value>
+  </data>
+  <data name="User" xml:space="preserve">
+    <value>User</value>
+  </data>
+  <data name="AnswerOption" xml:space="preserve">
+    <value>Answer Option</value>
+  </data>
+  <data name="New User" xml:space="preserve">
+    <value>New User</value>
+  </data>
+  <data name="New Department" xml:space="preserve">
+    <value>New Department</value>
+  </data>
+  <data name="Edit Department" xml:space="preserve">
+    <value>Edit Department</value>
   </data>
 </root>
