--- a/ProfileMatch.Services/LanguageService.pl.resx
+++ b/ProfileMatch.Services/LanguageService.pl.resx
@@ -639,47 +639,26 @@
   <data name="Max 20 characters" xml:space="preserve">
     <value>Max 20 znaków</value>
   </data>
-  <data name="Category {result.Name} created" xml:space="preserve">
-    <value>Kategoria utworzona</value>
-  </data>
-  <data name="Category {result.Name} updated" xml:space="preserve">
-    <value>Kategoria zaktualizowana</value>
-  </data>
-  <data name="ClosedQuestion {result.Name} created" xml:space="preserve">
-    <value>Pytanie zamknięte utworzone</value>
-  </data>
-  <data name="ClosedQuestion {Q.Name} updated" xml:space="preserve">
-    <value>Zamknięte pytanie {Q.Name} zaktualizowane</value>
-  </data>
-  <data name="$&quot;ClosedQuestion {Q.Name} already exists.&quot;" xml:space="preserve">
-    <value>Pytanie zamknięte {Q.Name}  już istnieje</value>
-  </data>
-  <data name="There was an error: {ex.Message}" xml:space="preserve">
-    <value>Wystąpił problem: {ex.Message}</value>
-  </data>
   <data name="Category created" xml:space="preserve">
     <value>Kategoria została utworzona</value>
   </data>
   <data name="Category updated" xml:space="preserve">
     <value>Kategoria został zaktualizowana</value>
   </data>
-  <data name="ClosedQuestion created" xml:space="preserve">
-    <value>Pytanie zamknięte zostało utworzone</value>
+  <data name="Question created" xml:space="preserve">
+    <value>Pytanie zostało utworzone</value>
   </data>
-  <data name="ClosedQuestion updated" xml:space="preserve">
-    <value>Pytanie zamknięte zostało zaktualizowane</value>
+  <data name="Question updated" xml:space="preserve">
+    <value>Pytanie zostało zaktualizowane</value>
   </data>
-  <data name="ClosedQuestion already exists." xml:space="preserve">
-    <value>Pytanie zamknięte już istnieje</value>
+  <data name="Question already exists." xml:space="preserve">
+    <value>Pytanie  już istnieje</value>
   </data>
   <data name="has been created[F]" xml:space="preserve">
     <value>została utworzona</value>
   </data>
   <data name="has been updated[F]" xml:space="preserve">
     <value>została zaktualizowana</value>
-  </data>
-  <data name="ClosedQuestion" xml:space="preserve">
-    <value>Pytanie zamknięte</value>
   </data>
   <data name="has been created[O]" xml:space="preserve">
     <value>zostało utworzone</value>
@@ -694,13 +673,10 @@
     <value>Zaktualizowano opcję odpowiedzi</value>
   </data>
   <data name="Answer option created" xml:space="preserve">
-    <value>Utworzono opcje odpowiedzi </value>
-  </data>
-  <data name="Note" xml:space="preserve">
-    <value>Pytanie otwarte</value>
+    <value>Utworzono opcje odpowiedzi</value>
   </data>
   <data name="has been created[M]" xml:space="preserve">
-    <value>został utworzony </value>
+    <value>został utworzony</value>
   </data>
   <data name="has been updated[M]" xml:space="preserve">
     <value>został zaktualizowany</value>
@@ -749,5 +725,8 @@
   </data>
   <data name="Wyślij" xml:space="preserve">
     <value>Wyślij</value>
+  </data>
+  <data name="Closed Question" xml:space="preserve">
+    <value>Pytanie zamknięte</value>
   </data>
 </root>
