--- a/ProfileMatch.Services/LanguageService.pl.resx
+++ b/ProfileMatch.Services/LanguageService.pl.resx
@@ -684,7 +684,7 @@
   <data name="created" xml:space="preserve">
     <value>utworzono</value>
   </data>
-  <data name="Upload file" xml:space="preserve">
+  <data name="Upload File" xml:space="preserve">
     <value>Załącz plik</value>
   </data>
   <data name="User" xml:space="preserve">
