--- a/ProfileMatch.Services/LanguageService.resx
+++ b/ProfileMatch.Services/LanguageService.resx
@@ -684,7 +684,7 @@
   <data name="created" xml:space="preserve">
     <value>created</value>
   </data>
-  <data name="Upload file" xml:space="preserve">
+  <data name="Upload File" xml:space="preserve">
     <value>Upload file</value>
   </data>
   <data name="User" xml:space="preserve">
